--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -2,6 +2,7 @@
 layout: none
 sitemap: false
 ---
+
 $family-primary: Arial, sans-serif;
 $primary: black;
 $text: black;
@@ -105,4 +106,9 @@ h6:hover .anchor-link {
 /* Link-specific hover */
 .anchor-link:hover {
   opacity: 1;
+}
+
+ul,
+ol {
+  margin-top: 0;
 }
