style: replace external link icon with a smaller arrow for improved visibility

--- a/_includes/head-scripts.html
+++ b/_includes/head-scripts.html
@@ -277,7 +277,7 @@
                     }
 
                     // Append the text directly
-                    targetElement.innerHTML += "&nbsp;↗";
+                    targetElement.innerHTML += "&nbsp;<small>🡥</small>";
                 }
             } catch (e) {
                 // Invalid URL, skip
