style: update external link icon size for improved visibility

--- a/_includes/head-scripts.html
+++ b/_includes/head-scripts.html
@@ -276,7 +276,7 @@
                         targetElement = buttonChild;
                     }
 
-                    targetElement.innerHTML += "<small>&nbsp;🡕</small>";
+                    targetElement.innerHTML += "<small><small>&nbsp;🡕</small></small>";
                 }
             } catch (e) {
                 // Invalid URL, skip
