--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -108,7 +108,7 @@ h6:hover .anchor-link {
   opacity: 1;
 }
 
-ul:not(:first-child),
-ol:not(:first-child) {
+.content ul:not(:first-child),
+.content ol:not(:first-child) {
   margin-top: 0;
 }
