--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -110,7 +110,7 @@ h6:hover .anchor-link {
 
 .content ul:not(:first-child),
 .content ol:not(:first-child),
-.p ul:not(:first-child),
-.p ol:not(:first-child) {
+.content .p ul:not(:first-child),
+.content .p ol:not(:first-child) {
   margin-top: 0;
 }
