--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -109,8 +109,11 @@ h6:hover .anchor-link {
 }
 
 .content ul:not(:first-child),
-.content ol:not(:first-child),
-.content .p ul:not(:first-child),
-.content .p ol:not(:first-child) {
+.content ol:not(:first-child) {
   margin-top: 0;
+}
+
+p:has(+ ul),
+p:has(+ ol) {
+  margin-bottom: 0;
 }
