--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -113,7 +113,7 @@ h6:hover .anchor-link {
   margin-top: 0;
 }
 
-p:has(+ ul),
-p:has(+ ol) {
+.content p:has(+ ul),
+.content p:has(+ ol) {
   margin-bottom: 0;
 }
